correção no alterar comapany
